# atomviz

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: record_demo.py
src/atomviz/: __init__.py  cli.py  elements.py  examples.py  parse_cif.py  parse_poscar.py  projection.py  render_html.py  render_svg.py  structure.py
tests/: test_examples.py  test_parse_cif.py  test_parse_poscar.py  test_projection.py  test_render_svg.py  test_structure.py  test_supercell.py
